--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 						<span class="date">Apr 2022 - Mar 2025</span>
 						<h2>Bachelor of Commerce (Hons.)</h2>
 						<span class="position">Delhi University</span>
-						<p class="mt-4">Expected Graduation: 2025. Currently pursuing a comprehensive BCom (Hons) program at Delhi University with a focus on Accounts. Actively engaged in coursework covering advanced accounting principles, financial management, and data analysis. Excited to apply theoretical knowledge to real-world scenarios and contribute meaningfully to the field of Accounts.</p>
+						<p class="mt-4">Expected Graduation: 2025. Currently pursuing a comprehensive BCom (Hons) program at Delhi University with a focus on Accounts. Actively engaged in coursework covering advanced accounting principles, financial management, and data analysis. Excited to apply theoretical knowledge to real-world scenarios and contribute meaningfully to the field of Analytics.</p>
 					</div>
 				</div>
 	
@@ -340,7 +340,7 @@
 						<span class="date">Issued Oct 2023</span>
 						<h2>Diploma in Advanced Finance and Analytics (DAFA)</h2>
 						<span class="position">Oxford Institute of Graphics and Information Technology</span>
-						<p class="mt-4">Credential ID OCE/GZB/PV/580. Skills: Data Analysis, Microsoft Excel, Data Visualization, Tally ERP, Excel Pivot, Pivot Tables and Pivot Charts, Data Cleaning, Financial Report Dashboard Analysis, Dashboard Analysis.</p>
+						<p class="mt-4"> Skills: Data Analysis, Microsoft Excel, Data Visualization, Tally ERP, Excel Pivot, Pivot Tables and Pivot Charts, Data Cleaning, Financial Report Dashboard Analysis, Dashboard Analysis.</p>
 					</div>
 				</div>
 			</div>
@@ -357,7 +357,7 @@
 						<span class="date">Issued by Coursera</span>
 						<h2>Google Data Analytics Professional Certificate</h2>
 						<span class="position">Coursera</span>
-						<p class="mt-4">Those who earn the Google Data Analytics Certificate have completed eight courses, developed by Google, that include hands-on, practice-based assessments and are designed to prepare them for introductory-level roles in Data Analytics. They are competent in tools and platforms including spreadsheets, SQL, Tableau, and R. They know how to prepare, process, analyze, and share data for thoughtful action.</p>
+						<p class="mt-4">I am proud to have earned the Google Data Analytics Certificate, completing eight comprehensive, hands-on courses developed by Google. This certification has equipped me with practical skills necessary for introductory-level roles in Data Analytics. I became proficient in key tools and platforms, including spreadsheets, SQL, Tableau, and R. The program enabled me to excel in preparing, processing, analyzing, and sharing data to drive meaningful insights. The skills and knowledge I gained empower me to tackle complex data challenges, uncover hidden patterns, and provide data-driven recommendations. I am eager to leverage these abilities to make a significant impact in the field of Data Analytics.</p>
 					</div>
 				</div>
 	
@@ -366,7 +366,7 @@
 						<span class="date">January 19, 2024</span>
 						<h2>Introduction to Data Analysis using Microsoft Excel</h2>
 						<span class="position">Coursera Project Network</span>
-						<p class="mt-4">Completed by Rohit Raj. Grade Achieved: 80%. Skills: Formulas and Functions in Spreadsheets, Data Analysis, Data Calculations.</p>
+						<p class="mt-4">I successfully completed the "Introduction to Data Analysis using Microsoft Excel" course through the Coursera Project Network on January 19, 2024, achieving a grade of 80%. This course equipped me with essential skills in Formulas and Functions in Spreadsheets, Data Analysis, and Data Calculations, providing a strong foundation for effectively analyzing and interpreting data using Microsoft Excel.I successfully completed the "Introduction to Data Analysis using Microsoft Excel" course through the Coursera Project Network on January 19, 2024, achieving a grade of 80%. This course equipped me with essential skills in Formulas and Functions in Spreadsheets, Data Analysis, and Data Calculations, providing a strong foundation for effectively analyzing and interpreting data using Microsoft Excel.</p>
 					</div>
 				</div>
 	
@@ -375,7 +375,7 @@
 						<span class="date">Issued Jan 2024</span>
 						<h2>Data Analytics Using ChatGPT with Excel and Python</h2>
 						<span class="position">Great Learning</span>
-						<p class="mt-4">Skills: Strategic Data Interpretation Proficiency, Python Data Analytics Mastery, Strategic Integration of ChatGPT with Excel, AI-Driven Problem-Solving Acumen, Synergistic Excel and Python Competence.</p>
+						<p class="mt-4">I completed the "Data Analytics Using ChatGPT with Excel and Python" course, which honed my skills in Strategic Data Interpretation, Python Data Analytics, and the seamless integration of ChatGPT with Excel. This course enhanced my AI-Driven Problem-Solving abilities and developed my proficiency in using both Excel and Python synergistically for comprehensive data analysis.</p>
 					</div>
 				</div>
 			</div>
