--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 						<span class="date">Issued Oct 2023</span>
 						<h2>Diploma in Advanced Finance and Analytics (DAFA)</h2>
 						<span class="position">Oxford Institute of Graphics and Information Technology</span>
-						<p class="mt-4"> Skills: Data Analysis, Microsoft Excel, Data Visualization, Tally ERP, Excel Pivot, Pivot Tables and Pivot Charts, Data Cleaning, Financial Report Dashboard Analysis, Dashboard Analysis.</p>
+						<p class="mt-4"> I completed a Diploma in Advanced Finance and Analytics (DAFA), where I developed a strong foundation in Data Analysis and advanced Microsoft Excel functions, including pivot tables and charts. My skills extend to Tally ERP, enabling effective financial management and reporting. I excel in Data Cleaning, ensuring accurate and reliable datasets, and specialize in creating dynamic Financial Report Dashboards. This blend of expertise allows me to deliver comprehensive data visualizations and insights that drive informed business decisions.</p>
 					</div>
 				</div>
 			</div>
