--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 						<span class="date">Issued Jan 2024</span>
 						<h2>Data Analytics Using ChatGPT with Excel and Python</h2>
 						<span class="position">Great Learning</span>
-						<p class="mt-4">I completed the "Data Analytics Using ChatGPT with Excel and Python" course, which honed my skills in Strategic Data Interpretation, Python Data Analytics, and the seamless integration of ChatGPT with Excel. This course enhanced my AI-Driven Problem-Solving abilities and developed my proficiency in using both Excel and Python synergistically for comprehensive data analysis.</p>
+						<p class="mt-4">I completed the "Data Analytics Using ChatGPT with Excel and Python" course, where I honed my skills in Strategic Data Interpretation, leveraging advanced techniques to extract meaningful insights from complex datasets. The course significantly enhanced my Python Data Analytics capabilities, allowing me to utilize powerful libraries for data manipulation and analysis. Additionally, I gained expertise in seamlessly integrating ChatGPT with Excel, combining the strengths of AI-driven problem-solving with Excel's robust data handling features. This comprehensive training developed my proficiency in using both Excel and Python synergistically, enabling me to perform thorough and accurate data analyses that drive informed decision-making.</p>
 					</div>
 				</div>
 			</div>
