--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 				<div class="col-md-10 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Resume</h1>
 					<h2 class="mb-4">Resume</h2>
-					<p>Aspiring Data Analyst with foundational knowledge in data science, statistical analysis, and project management. Enthusiastic about leveraging data-driven insights to drive business strategies and decisions.</p>
+					<p>In pursuit of excellence as a Junior Data Analyst, I specialize in data science, data modeling, and effective project management.</p>
 				</div>
 			</div>
 	
