--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 									<li>Introduction to Data Analysis using Microsoft Excel</li>
 									<li>Data Analytics Using ChatGPT with Excel and Python</li>
 									<li class="d-flex"><span>Skills:</span></li>
-									<li>Data Analysis, Portfolio Development , Hypothesis Testing, Data Visualization (Microsoft Excel, Tableau), Tally ERP, R (Markdown), Excel (Advanced Formulas), Google Analytics & SEO</li>
+									<li>Data Analysis, Portfolio Development , Hypothesis Testing, Data Visualization (Microsoft Excel, Tableau), R (Markdown), Spreadsheets , Google Analytics & SEO</li>
 									<li class="d-flex"><span>Interests:</span> <span>Traveling, Travel Photography, Teaching</span></li>
 								</ul>
 							</div>
