--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Issued by Coursera</span>
+						<span class="date">Issued by Google Career Certificates</span>
 						<h2>Google Data Analytics Professional Certificate</h2>
 						<span class="position">Coursera</span>
 						<p class="mt-4">I am proud to have earned the Google Data Analytics Certificate, completing eight comprehensive, hands-on courses developed by Google. This certification has equipped me with practical skills necessary for introductory-level roles in Data Analytics. I became proficient in key tools and platforms, including spreadsheets, SQL, Tableau, and R. The program enabled me to excel in preparing, processing, analyzing, and sharing data to drive meaningful insights. The skills and knowledge I gained empower me to tackle complex data challenges, uncover hidden patterns, and provide data-driven recommendations. I am eager to leverage these abilities to make a significant impact in the field of Data Analytics.</p>
@@ -363,7 +363,7 @@
 	
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">January 19, 2024</span>
+						<span class="date">Issued by Coursera Project Network</span>
 						<h2>Introduction to Data Analysis using Microsoft Excel</h2>
 						<span class="position">Coursera Project Network</span>
 						<p class="mt-4">I successfully completed the "Introduction to Data Analysis using Microsoft Excel" course through the Coursera Project Network on January 19, 2024, achieving a grade of 80%. This course equipped me with essential skills in Formulas and Functions in Spreadsheets, Data Analysis, and Data Calculations, providing a strong foundation for effectively analyzing and interpreting data using Microsoft Excel.I successfully completed the "Introduction to Data Analysis using Microsoft Excel" course through the Coursera Project Network on January 19, 2024, achieving a grade of 80%. This course equipped me with essential skills in Formulas and Functions in Spreadsheets, Data Analysis, and Data Calculations, providing a strong foundation for effectively analyzing and interpreting data using Microsoft Excel.</p>
@@ -372,7 +372,7 @@
 	
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Issued Jan 2024</span>
+						<span class="date">Issued by Great Learning</span>
 						<h2>Data Analytics Using ChatGPT with Excel and Python</h2>
 						<span class="position">Great Learning</span>
 						<p class="mt-4">I completed the "Data Analytics Using ChatGPT with Excel and Python" course, where I honed my skills in Strategic Data Interpretation, leveraging advanced techniques to extract meaningful insights from complex datasets. The course significantly enhanced my Python Data Analytics capabilities, allowing me to utilize powerful libraries for data manipulation and analysis. Additionally, I gained expertise in seamlessly integrating ChatGPT with Excel, combining the strengths of AI-driven problem-solving with Excel's robust data handling features. This comprehensive training developed my proficiency in using both Excel and Python synergistically, enabling me to perform thorough and accurate data analyses that drive informed decision-making.</p>
