prompt enginerring add

--- a/index.html
+++ b/index.html
@@ -363,6 +363,15 @@
 	
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
+						<span class="date">Issued by Vanderbilt University</span>
+						<h2>Prompt Engineering Specialization</h2>
+						<span class="position">Vanderbilt University, Nashville, United States (#248)</span>
+						<p class="mt-4">I completed the "Prompt Engineering Specialization" from Vanderbilt University, focusing on the advanced use of Generative AI for data analysis. Through this course, I learned to write and outline content at ten times the speed, brainstorm innovative solutions, and plan intricate events and processes. I developed the skills to generate comprehensive PowerPoint presentations and visualizations directly from Excel data, extract critical information from PDFs and other documents, and produce personalized marketing content from transcripts and videos. These capabilities have significantly augmented my proficiency in data analysis, allowing me to leverage AI to streamline workflows, uncover insights, and drive data-driven decision-making.</p>
+					</div>
+				</div>
+				
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
 						<span class="date">Issued by Coursera Project Network</span>
 						<h2>Introduction to Data Analysis using Microsoft Excel</h2>
 						<span class="position">Coursera Project Network</span>
