--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 							<div class="col-md-12 heading-section ftco-animate">
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
-								<p>Currently pursuing a Bachelor of Commerce (Hons.) degree from Delhi University, specializing in Accounts. Actively engaged in a comprehensive BCom (Hons) program with a focus on advanced accounting principles, data analysis, and machine learning. Eager to apply theoretical knowledge and practical skills gained through coursework and certifications to contribute effectively in the field of Data Science and Analytics.</p>
+								<p>Currently pursuing a Bachelor of Commerce (Hons.) degree from Delhi University with a specialized focus on business statistics. Through my coursework, I have gained a robust foundation in statistical analysis and its application in business decision-making. Additionally, I have honed my skills in data science and advanced Prompt Engineering techniques through specialized certifications. These experiences have equipped me with the ability to leverage data-driven insights effectively, contributing to my aspirations in the field of Data Science and Analytics.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, Artificial Intelligence, Data Analysis &amp; Digital Marketing</span></li>
