--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 						<span class="date">Apr 2022 - Mar 2025</span>
 						<h2>Bachelor of Commerce (Hons.)</h2>
 						<span class="position">Delhi University</span>
-						<p class="mt-4">Expected Graduation: 2025. Currently pursuing a comprehensive BCom (Hons) program at Delhi University with a focus on Accounts. Actively engaged in coursework covering advanced accounting principles, financial management, and data analysis. Excited to apply theoretical knowledge to real-world scenarios and contribute meaningfully to the field of Analytics.</p>
+						<p class="mt-4">Expected Graduation: 2025. Currently pursuing a comprehensive BCom (Hons) program at Delhi University with a specialized focus on business statistics. Engaged in coursework encompassing advanced statistical analysis, financial management, and data-driven decision-making. Eager to apply theoretical insights to practical challenges and make significant contributions to the field of Analytics.</p>
 					</div>
 				</div>
 	
