--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 						<span class="date">Apr 2022 - Mar 2025</span>
 						<h2>Bachelor of Commerce (Hons.)</h2>
 						<span class="position">Delhi University</span>
-						<p class="mt-4">Expected Graduation: 2025. Currently pursuing a comprehensive BCom (Hons) program at Delhi University with a specialized focus on business statistics. Engaged in coursework encompassing advanced statistical analysis, financial management, and data-driven decision-making. Eager to apply theoretical insights to practical challenges and make significant contributions to the field of Analytics.</p>
+						<p class="mt-4">Expected Graduation: 2025. Currently enrolled in the rigorous Bachelor of Commerce (Hons) program at Delhi University, my academic focus revolves around business statistics and advanced data analytics. Engaged deeply in coursework encompassing sophisticated statistical techniques, financial analysis, and strategic data interpretation, I am committed to mastering the skills necessary for deciphering complex datasets and deriving actionable insights. My goal is to seamlessly integrate theoretical knowledge with practical applications, driving informed decision-making in the dynamic realm of Analytics.</p>
 					</div>
 				</div>
 	
