--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				<p>&copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | Designed by Rohit Jha</p>
+				<p>&copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by Rohit Jha</p>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
