--- a/index.html
+++ b/index.html
@@ -414,19 +414,19 @@
             <h2 class="mb-4">Projects</h2>
             <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
           <!-- Commented out the entire section to hide projects -->
-<!--
+
 <div class="row d-flex">
     <div class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry justify-content-end">
-            <a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+            <a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
             </a>
             <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3>
-                <p>Analyzed music store data using advanced SQL queries to identify gaps and increase business growth.</p>
+                <h3 class="heading"><a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git">Cyclistic Bike Share Data Analysis using R</a></h3>
+                <p>Analyzed Cyclistic bike share data using advanced R programming to identify usage patterns and increase operational efficiency.</p>
             </div>
         </div>
     </div>
-    <div class="col-md-4 d-flex ftco-animate">
+   <!-- <div class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry justify-content-end">
             <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
             </a>
