--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+            <p>Below are the sample Data Analytics projects on SQL,R, Python, Power BI & ML.</p>
           <!-- Commented out the entire section to hide projects -->
 
 <div class="row d-flex">
