--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
             <a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
             </a>
             <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git">Cyclistic Bike Share Data Analysis using R</a></h3>
-                <p>Analyzed Cyclistic bike share data using advanced R programming to identify usage patterns and increase operational efficiency.</p>
+                <h3 class="heading"><a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git">Advanced Cyclistic Bike Share Data Analysis Utilizing R and Spreadsheets for Strategic Insights</a></h3>
+                <p>Conducted an in-depth analysis of Cyclistic bike share data using advanced R programming and spreadsheets, leveraging professional data science expertise to reveal usage patterns and optimize operational efficiency.</p>
             </div>
         </div>
     </div>
