--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 	
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+					<p><a href="https://github.com/RohitRa200/rohitraj.github.io/blob/7048686baa0b515234587c0832ac1bb8c9cca16e/resume/resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
 				</div>
 			</div>
 		</div>
@@ -576,7 +576,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://github.com/RohitRa200/rohitraj.github.io/blob/7048686baa0b515234587c0832ac1bb8c9cca16e/resume/resume.pdf">resumelink</a></p>
 	          </div>
           </div>
 
