--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://github.com/RohitRa200/rohitraj.github.io/blob/7048686baa0b515234587c0832ac1bb8c9cca16e/resume/resume.pdf">resumelink</a></p>
+	            <p><a href="https://github.com/RohitRa200/rohitraj.github.io/blob/7048686baa0b515234587c0832ac1bb8c9cca16e/resume/resume.pdf">Click Here</a></p>
 	          </div>
           </div>
 
