--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 						<span class="date">Issued by Vanderbilt University</span>
 						<h2>Prompt Engineering Specialization</h2>
 						<span class="position">Vanderbilt University, Nashville, United States (#248)</span>
-						<p class="mt-4">I completed the "Prompt Engineering Specialization" from Vanderbilt University, focusing on the advanced use of Generative AI for data analysis. Through this course, I learned to write and outline content at ten times the speed, brainstorm innovative solutions, and plan intricate events and processes. I developed the skills to generate comprehensive PowerPoint presentations and visualizations directly from Excel data, extract critical information from PDFs and other documents, and produce personalized marketing content from transcripts and videos. These capabilities have significantly augmented my proficiency in data analysis, allowing me to leverage AI to streamline workflows, uncover insights, and drive data-driven decision-making.</p>
+						<p class="mt-4">I successfully completed the "Prompt Engineering Specialization" from Vanderbilt University, which focuses on the advanced integration of Generative AI into data analysis. This specialization has honed my ability to utilize AI for accelerating data processing and enhancing analytical precision. I developed proficiency in creating comprehensive visualizations directly from Excel data and extracting key insights from various document types. These enhanced capabilities enable me to streamline complex workflows, identify critical patterns, and derive actionable insights, significantly contributing to data-driven decision-making processes.</p>
 					</div>
 				</div>
 				
@@ -380,7 +380,7 @@
 						<span class="date">Issued by Coursera Project Network</span>
 						<h2>Introduction to Data Analysis using Microsoft Excel</h2>
 						<span class="position">Coursera Project Network</span>
-						<p class="mt-4">I successfully completed the "Introduction to Data Analysis using Microsoft Excel" course through the Coursera Project Network on January 19, 2024, achieving a grade of 80%. This course equipped me with essential skills in Formulas and Functions in Spreadsheets, Data Analysis, and Data Calculations, providing a strong foundation for effectively analyzing and interpreting data using Microsoft Excel.I successfully completed the "Introduction to Data Analysis using Microsoft Excel" course through the Coursera Project Network on January 19, 2024, achieving a grade of 80%. This course equipped me with essential skills in Formulas and Functions in Spreadsheets, Data Analysis, and Data Calculations, providing a strong foundation for effectively analyzing and interpreting data using Microsoft Excel.</p>
+						<p class="mt-4">I successfully completed the "Introduction to Data Analysis using Microsoft Excel" course through the Coursera Project Network on January 19, 2024, achieving a grade of 80%. This course equipped me with essential skills in Formulas and Functions in Spreadsheets, Data Analysis, and Data Calculations, providing a strong foundation for effectively analyzing and interpreting data using Microsoft Excel.</p>
 					</div>
 				</div>
 	
