--- a/index.html
+++ b/index.html
@@ -423,20 +423,24 @@
             <div class="text mt-3 float-right d-block">
                 <h3 class="heading"><a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git">Advanced Cyclistic Bike Share Data Analysis Utilizing R and Spreadsheets for Strategic Insights</a></h3>
                 <p>Conducted an in-depth analysis of Cyclistic bike share data using advanced R programming and spreadsheets, leveraging professional data science expertise to reveal usage patterns and optimize operational efficiency.</p>
-           <div class="col-md-4 d-flex ftco-animate">
-    <div class="blog-entry justify-content-end">
-        <a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
-        </a>
-        <div class="text mt-3 float-right d-block">
-            <h3 class="heading">
-                <a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis">Krishna Store Data Analysis Project</a>
-            </h3>
-            <p>
-                This project analyzes the 2022 sales data of Krishna Store to derive actionable insights for improving business growth and strategic decision-making. Key findings include that women aged 30-49 in Maharashtra, Karnataka, and Uttar Pradesh contributed ~50% of sales. Amazon, Flipkart, and Myntra accounted for nearly 80% of total sales. View the full project on GitHub.
-            </p>
-        </div>
-    </div>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-md-4 d-flex ftco-animate">
+		<div class="blog-entry justify-content-end">
+			<a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+			</a>
+			<div class="text mt-3 float-right d-block">
+				<h3 class="heading">
+					<a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis">Krishna Store Data Analysis Project</a>
+				</h3>
+				<p>This project analyzes the 2022 sales data of Krishna Store to derive actionable insights for improving business growth and strategic decision-making. Key findings include that women aged 30-49 in Maharashtra, Karnataka, and Uttar Pradesh contributed ~50% of sales. Amazon, Flipkart, and Myntra accounted for nearly 80% of total sales. View the full project on GitHub.</p>
+			</div>
+		</div>
+	</div>
 </div>
+
    <!-- <div class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry">
             <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
