--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="1">0</span> <span>+</span>
+									<span class="number" data-number="5">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/rohitrajanalyticsmind/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -442,19 +442,22 @@
 	</div>
 </div>
 
-   <!-- <div class="col-md-4 d-flex ftco-animate">
-        <div class="blog-entry">
-            <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+<div class="row d-flex">
+    <div class="col-md-4 d-flex ftco-animate">
+        <div class="blog-entry justify-content-end">
+            <a href="https://github.com/RohitRa200/Diwali-Sales-Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
             </a>
             <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales Dashboard Project for Beginners</a></h3>
-                <p>Designed a Power BI dashboard for Madhav Store to track and analyze online sales data across India.</p>
+                <h3 class="heading">
+                    <a href="https://github.com/RohitRa200/Diwali-Sales-Analysis">Diwali Sales Analysis: Enhancing Customer Experience & Revenue</a>
+                </h3>
+                <p>This project analyzes the sales data from Diwali, identifying key customer demographics and purchasing trends to provide insights that enhance customer experience and drive revenue growth. View the full project on GitHub.</p>
             </div>
         </div>
     </div>
 </div>
 
-<div class="row d-flex justify-content-center">
+<!--<div class="row d-flex justify-content-center">
     <div class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry justify-content-end">
             <a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
