--- a/index.html
+++ b/index.html
@@ -406,55 +406,56 @@
 
    
 
-    <section class="ftco-section" id="project-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL,R, Python, Power BI & ML.</p>
-          <!-- Commented out the entire section to hide projects -->
-
-<div class="row d-flex">
-    <div class="col-md-4 d-flex ftco-animate">
-        <div class="blog-entry justify-content-end">
-            <a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
-            </a>
-            <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git">Advanced Cyclistic Bike Share Data Analysis Utilizing R and Spreadsheets for Strategic Insights</a></h3>
-                <p>Conducted an in-depth analysis of Cyclistic bike share data using advanced R programming and spreadsheets, leveraging professional data science expertise to reveal usage patterns and optimize operational efficiency.</p>
+	<section class="ftco-section" id="project-section">
+		<div class="container">
+		  <div class="row justify-content-center mb-5 pb-5">
+			<div class="col-md-7 heading-section text-center ftco-animate">
+			  <h1 class="big big-2">Projects</h1>
+			  <h2 class="mb-4">Projects</h2>
+			  <p>Below are the sample Data Analytics projects on SQL, R, Python, Power BI & ML.</p>
 			</div>
-		</div>
-	</div>
-
-	<div class="col-md-4 d-flex ftco-animate">
-		<div class="blog-entry justify-content-end">
-			<a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
-			</a>
-			<div class="text mt-3 float-right d-block">
-				<h3 class="heading">
-					<a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis">Krishna Store Data Analysis Project</a>
-				
-				</h3>
-				<p>This project analyzes the 2022 sales data of Krishna Store to derive actionable insights for improving business growth and strategic decision-making. Key findings include that women aged 30-49 in Maharashtra, Karnataka, and Uttar Pradesh contributed ~50% of sales. Amazon, Flipkart, and Myntra accounted for nearly 80% of total sales. View the full project on GitHub.</p>
+		  </div>
+	  
+		  <div class="row d-flex justify-content-between"> <!-- Added justify-content-between for equal spacing -->
+			<!-- First project -->
+			<div class="col-md-4 d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+				  <h3 class="heading"><a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git">Advanced Cyclistic Bike Share Data Analysis Utilizing R and Spreadsheets for Strategic Insights</a></h3>
+				  <p>Conducted an in-depth analysis of Cyclistic bike share data using advanced R programming and spreadsheets, leveraging professional data science expertise to reveal usage patterns and optimize operational efficiency.</p>
+				</div>
+			  </div>
 			</div>
+	  
+			<!-- Second project -->
+			<div class="col-md-4 d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+				  <h3 class="heading"><a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis">Krishna Store Data Analysis Project</a></h3>
+				  <p>This project analyzes the 2022 sales data of Krishna Store to derive actionable insights for improving business growth and strategic decision-making. Key findings include that women aged 30-49 in Maharashtra, Karnataka, and Uttar Pradesh contributed ~50% of sales. Amazon, Flipkart, and Myntra accounted for nearly 80% of total sales. View the full project on GitHub.</p>
+				</div>
+			  </div>
+			</div>
+	  
+			<!-- Third project -->
+			<div class="col-md-4 d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<a href="https://github.com/RohitRa200/Diwali-Sales-Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+				  <h3 class="heading"><a href="https://github.com/RohitRa200/Diwali-Sales-Analysis">Diwali Sales Analysis: Enhancing Customer Experience & Revenue</a></h3>
+				  <p>This project analyzes the sales data from Diwali, identifying key customer demographics and purchasing trends to provide insights that enhance customer experience and drive revenue growth. View the full project on GitHub.</p>
+				</div>
+			  </div>
+			</div>
+		  </div>
 		</div>
-	</div>
-
-<div class="row d-flex">
-    <div class="col-md-4 d-flex ftco-animate">
-        <div class="blog-entry justify-content-end">
-            <a href="https://github.com/RohitRa200/Diwali-Sales-Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
-            </a>
-            <div class="text mt-3 float-right d-block">
-                <h3 class="heading">
-                    <a href="https://github.com/RohitRa200/Diwali-Sales-Analysis">Diwali Sales Analysis: Enhancing Customer Experience & Revenue</a>
-                </h3>
-                <p>This project analyzes the sales data from Diwali, identifying key customer demographics and purchasing trends to provide insights that enhance customer experience and drive revenue growth. View the full project on GitHub.</p>
-            </div>
-        </div>
-    </div>
-</div>
+	  </section>
+	  
 
 <!--<div class="row d-flex justify-content-center">
     <div class="col-md-4 d-flex ftco-animate">
