--- a/index.html
+++ b/index.html
@@ -416,20 +416,20 @@
 			</div>
 		  </div>
 	  
-		  <div class="row d-flex justify-content-between"> <!-- Added justify-content-between for equal spacing -->
-			<!-- First project -->
+		  <div class="row d-flex justify-content-between"> <!-- Adjusted row for spacing -->
+			<!-- First project: Diwali Sales Analysis -->
 			<div class="col-md-4 d-flex ftco-animate">
 			  <div class="blog-entry justify-content-end">
-				<a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+				<a href="https://github.com/RohitRa200/Diwali-Sales-Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
-				  <h3 class="heading"><a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git">Advanced Cyclistic Bike Share Data Analysis Utilizing R and Spreadsheets for Strategic Insights</a></h3>
-				  <p>Conducted an in-depth analysis of Cyclistic bike share data using advanced R programming and spreadsheets, leveraging professional data science expertise to reveal usage patterns and optimize operational efficiency.</p>
+				  <h3 class="heading"><a href="https://github.com/RohitRa200/Diwali-Sales-Analysis">Diwali Sales Analysis: Enhancing Customer Experience & Revenue</a></h3>
+				  <p>This project analyzes the sales data from Diwali, identifying key customer demographics and purchasing trends to provide insights that enhance customer experience and drive revenue growth. View the full project on GitHub.</p>
 				</div>
 			  </div>
 			</div>
 	  
-			<!-- Second project -->
+			<!-- Second project: Krishna Store Data Analysis -->
 			<div class="col-md-4 d-flex ftco-animate">
 			  <div class="blog-entry justify-content-end">
 				<a href="https://github.com/RohitRa200/StoreTrends-DataAnalysis" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
@@ -441,21 +441,20 @@
 			  </div>
 			</div>
 	  
-			<!-- Third project -->
+			<!-- Third project: Cyclistic Bike Share Data Analysis -->
 			<div class="col-md-4 d-flex ftco-animate">
 			  <div class="blog-entry justify-content-end">
-				<a href="https://github.com/RohitRa200/Diwali-Sales-Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+				<a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
-				  <h3 class="heading"><a href="https://github.com/RohitRa200/Diwali-Sales-Analysis">Diwali Sales Analysis: Enhancing Customer Experience & Revenue</a></h3>
-				  <p>This project analyzes the sales data from Diwali, identifying key customer demographics and purchasing trends to provide insights that enhance customer experience and drive revenue growth. View the full project on GitHub.</p>
+				  <h3 class="heading"><a href="https://github.com/RohitRa200/Cyclistic-Bike-Share-Analysis-.git">Advanced Cyclistic Bike Share Data Analysis Utilizing R and Spreadsheets for Strategic Insights</a></h3>
+				  <p>Conducted an in-depth analysis of Cyclistic bike share data using advanced R programming and spreadsheets, leveraging professional data science expertise to reveal usage patterns and optimize operational efficiency.</p>
 				</div>
 			  </div>
 			</div>
 		  </div>
 		</div>
-	  </section>
-	  
+	  </section>	  
 
 <!--<div class="row d-flex justify-content-center">
     <div class="col-md-4 d-flex ftco-animate">
