--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 									<li><i class="fas fa-arrow-right"></i> Data Analytics Using ChatGPT with Excel and Python</li>
 									<li><i class="fas fa-arrow-right"></i> Prompt Engineering Specialization from Vanderbilt University</li>
 									<li class="d-flex"><span>Skills:</span></li>
-									<li>Data Analysis, Portfolio Development, Hypothesis Testing, Data Visualization (Microsoft Excel, Tableau), R (Markdown), Spreadsheets, Google Analytics & SEO, Strategic Data Interpretation, Python Data Analytics, AI-driven Problem-Solving, Prompt Engineering</li>
+									<li> Data Analysis, Exploratory Data Analysis (EDA), Portfolio Development, Hypothesis Testing, Data Visualization (Microsoft Excel, Tableau, Power BI, Matplotlib, Seaborn), R Programming (R Markdown), Spreadsheets (Microsoft Excel), Python for Data Analytics (Pandas, Numpy), AI-driven Problem-Solving, Prompt Engineering, Strategic Data Interpretation, SQL (Data querying, cleaning, and management), Business Statistics.</li>
 									<li class="d-flex"><span>Interests:</span> <span>Listening to music, Data Analysis Activities</span></li>
 								</ul>
 							</div>
