--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
 	        </div>
 	      </div>
 		</div>
+	</section>
+
+
+
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     	<div class="container">
 			<div class="row">
@@ -280,7 +284,10 @@
 											aria-valuemax="100"></div>
 									</div>
 								</div>
-								
+							</div>
+						</div>
+					</div>
+
 					<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
 						<div class="row justify-content-start pb-3">
 							<div class="col-md-12 heading-section ftco-animate">
