--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="10">0</strong>
+                <strong class="number" data-number="10+">0</strong>
                 <span>Projects</span>
               </div>
             </div>
@@ -538,7 +538,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="50">0</strong>
+                <strong class="number" data-number="50+">0</strong>
                 <span>Data Insights Generated</span>
               </div>
             </div>
@@ -546,7 +546,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="10">0</strong>
+                <strong class="number" data-number="10+">0</strong>
                 <span>Data Visualization Projects</span>
               </div>
             </div>
